# simple-voice-server

./: AGENTS.md  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
models/: __init__.py  base.py  cohere_stt.py  gemma4.py  gemma_stt.py  granite_speech_stt.py  kokoro_tts.py  registry.py
