[project]
name = "voice-openai-server"
version = "0.1.1"
description = "A simple STT & TTS OpenAI-compatible API server"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.135.3",
    "kokoro>=0.9.2",
    "multipart>=1.3.1",
    "resampy>=0.4.3",
    "soundfile>=0.13.1",
    "torch==2.10.0",
    "transformers[torch]>=5.5.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
]
